--- a/index.html
+++ b/index.html
@@ -1,7 +1,49 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="en">
+  <head></head>
+  <body>
+    <header>
+      <meta charset="UTF-8">
+      <title>landon's epic internet hideout (no girlz allowed)</title>
+      <link href="styles.css" rel="stylesheet">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
+    </header>
+    <h1> NINJA ATTACK WEEKLY </h1>
+    <p> </p>
+    <h2> Love one another but make not a bond of love: Let it rather be a moving sea between the shores of your souls </h2>
+    <hr>
+    <div>
+  <blockquote> 
+    <b>
+      <i>
+        <u> "His eyes were eggs of unstable crystal, vibrating with a frequency whose name was rain and the sound of trains, suddenly sprouting a humming forest of hair-fine glass spines." </u>
+      </i>
+    </b>
+  </blockquote>
+</div>
+    <br>
+    <div>
+  <a href="https://redguymusic.com/"> my real website :D </a>
+  </div>
+    <br>
+    <div>
+  <img src="oprah.gif">
+</div>
+    <div>
+    <ul>
+		<li>bass</li>
+		<li>bass</li>
+		<li>bass</li>
+</ul>
+</div>
+    <br>
+    <div>
+  <audio controls=""> <source src="mtec343.mp3" type="audio/mpeg"></audio> <br>
+</div>
+    <div>
+	    <script src="orbits.js"></script>
+	</div>
+    <p></p>
 </body>
 </html>
