--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   </div>
     <br>
     <div>
-  <img src="oprah.gif">
+  <img src="mishima.jpg">
 </div>
     <div>
     <ul>
-		<li>bass</li>
-		<li>bass</li>
-		<li>bass</li>
+		<li>lego</li>
+		<li>lego</li>
+		<li>lego</li>
 </ul>
 </div>
     <br>
