--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     </header>
-    <h1> NINJA ATTACK WEEKLY </h1>
+    <h1> style="background-color:powderblue;">NINJA ATTACK WEEKLY</h1>
     <p> </p>
     <h2> Love one another but make not a bond of love: Let it rather be a moving sea between the shores of your souls </h2>
     <hr>
