Trying More Colors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head></head>
-  <body>
+  <body style="color:DodgerBlue;">
     <header>
       <meta charset="UTF-8">
       <title>landon's epic internet hideout (no girlz allowed)</title>
@@ -9,7 +9,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/p5.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.1/addons/p5.sound.min.js"></script>
     </header>
-    <h style="background-color:DodgerBlue;">NINJA ATTACK WEEKLY</h1>
+    <h1 style="border:2px solid Tomato;">NINJA ATTACK WEEKLY</h1>
     <p> </p>
     <h2> Love one another but make not a bond of love: Let it rather be a moving sea between the shores of your souls </h2>
     <hr>
